<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F1233"
    tools:context=".EditThongTinSinhVien">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imghinhanh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btnChonanh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row1_edit_student"
        android:background="#E4ABCA"
        android:textColor="#4F1233"
        android:textSize="11pt"
        app:layout_constraintTop_toBottomOf="@+id/imghinhanh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvMa"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row2_edit_student"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtMa"
        app:layout_constraintBottom_toBottomOf="@+id/edtMa"
        app:layout_constraintEnd_toEndOf="@+id/tvSothich"
        />
    <EditText
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:id="@+id/edtMa"
        android:enabled="false"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintTop_toBottomOf="@+id/btnChonanh"
        app:layout_constraintStart_toEndOf="@+id/tvMa"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvTen"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row3_edit_student"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtTen"
        app:layout_constraintBottom_toBottomOf="@+id/edtTen"
        app:layout_constraintEnd_toEndOf="@+id/tvSothich"
        />
    <EditText
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:id="@+id/edtTen"
        android:inputType="textPersonName"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintTop_toBottomOf="@+id/edtMa"
        app:layout_constraintStart_toEndOf="@+id/tvTen"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvDiem"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row4_edit_student"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtDiem"
        app:layout_constraintBottom_toBottomOf="@+id/edtDiem"
        app:layout_constraintEnd_toEndOf="@+id/tvSothich"
        />
    <EditText
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:id="@+id/edtDiem"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/edtTen"
        app:layout_constraintStart_toEndOf="@+id/tvDiem"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvSothich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row5_edit_student"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtSothich"
        app:layout_constraintBottom_toBottomOf="@+id/edtSothich"
        />
    <EditText
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:id="@+id/edtSothich"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintTop_toBottomOf="@+id/edtDiem"
        app:layout_constraintStart_toEndOf="@+id/tvSothich"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvLop"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row6_edit_student"
        android:textSize="12pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spnLop"
        app:layout_constraintBottom_toBottomOf="@+id/spnLop"
        app:layout_constraintEnd_toEndOf="@+id/tvSothich"
        />
    <Spinner
        android:id="@+id/spnLop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtSothich"
        app:layout_constraintStart_toEndOf="@+id/tvLop"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@id/btnLuu"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_btnLuu"
        android:textSize="11pt"
        android:textColor="#4F1233"
        android:backgroundTint="#E4ABCA"

        app:layout_constraintTop_toBottomOf="@+id/spnLop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnThoat"
        />
    <Button
        android:id="@+id/btnThoat"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_btnThoat_edit_student"
        android:textSize="11pt"
        android:textColor="#4F1233"
        android:backgroundTint="#E4ABCA"

        app:layout_constraintTop_toBottomOf="@+id/spnLop"
        app:layout_constraintStart_toEndOf="@+id/btnLuu"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>