<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DangNhap">

    <TextView
        android:id="@+id/tvTieuDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_header_login"
        android:textSize="20pt"
        android:textStyle="bold"
        android:textColor="#E4ABCA"
        android:textAlignment="center"
        android:background="#4F1233"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row1_login"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@+id/edtUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtUser"
        app:layout_constraintBottom_toBottomOf="@+id/edtUser"
        />
    <EditText
        android:id="@+id/edtUser"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:hint="admin"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUser"
        app:layout_constraintTop_toBottomOf="@+id/tvTieuDe"
        app:layout_constraintBottom_toTopOf="@id/edtPass"
        />
    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row2_login"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@+id/edtPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtPass"
        app:layout_constraintBottom_toBottomOf="@+id/edtPass"
        />
    <EditText
        android:id="@+id/edtPass"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:hint="123"
        android:inputType="numberPassword"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPass"
        app:layout_constraintTop_toBottomOf="@+id/edtUser"
        app:layout_constraintBottom_toTopOf="@+id/btnDN"
        />
    <Button
        android:id="@+id/btnDN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row3_login"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>