<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4ABCA"
    tools:context=".DanhSachPhanLoai">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/tvTieuDe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_header_type"
        android:textColor="#4F1233"
        android:textSize="18pt"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Mã lớp -->
    <TextView
        android:id="@+id/tvMalop"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row1_type"
        android:textColor="#4F1233"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@id/tvTieuDe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvTenlop"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"/>

    <EditText
        android:id="@+id/edtMalop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textColor="#4F1233"
        android:textSize="14pt"
        app:layout_constraintStart_toEndOf="@id/tvMalop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMalop"
        app:layout_constraintBottom_toBottomOf="@id/tvMalop"
        android:layout_marginEnd="12dp"/>

    <!-- Tên lớp -->
    <TextView
        android:id="@+id/tvTenlop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row2_type"
        android:textColor="#4F1233"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@id/tvMalop"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"/>

    <EditText
        android:id="@+id/edtTenlop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#4F1233"
        android:textSize="14pt"
        app:layout_constraintStart_toEndOf="@id/tvTenlop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTenlop"
        app:layout_constraintBottom_toBottomOf="@id/tvTenlop"
        android:layout_marginEnd="12dp"/>

    <!-- Hai nút -->
    <Button
        android:id="@+id/btnLuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btnLuu"
        android:textSize="14pt"
        app:layout_constraintTop_toBottomOf="@id/edtTenlop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btnClear"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnLuu"
        app:layout_constraintTop_toTopOf="@id/btnLuu"
        android:layout_marginStart="16dp"/>

    <!-- LISTVIEW CHIẾM PHẦN CÒN LẠI -->
    <ListView
        android:id="@+id/lvPhanloai"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnLuu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>