<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4F1233"
    >

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:id="@+id/imghinhanh"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/tvMasv"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row1_student"
        android:textSize="11pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toEndOf="@+id/imghinhanh"
        app:layout_constraintTop_toTopOf="@id/edtMasv"
        app:layout_constraintBottom_toBottomOf="@id/edtMasv"
        app:layout_constraintEnd_toEndOf="@+id/tvPhanloai"
        />
    <TextView
        android:id="@+id/edtMasv"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:textSize="11pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toEndOf="@+id/tvMasv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvTensv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_row2_student"
        android:textSize="11pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toEndOf="@+id/imghinhanh"
        app:layout_constraintTop_toTopOf="@id/edtTensv"
        app:layout_constraintBottom_toBottomOf="@id/edtTensv"

        />
    <TextView
        android:id="@+id/edtTensv"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:textSize="11pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toEndOf="@+id/tvTensv"
        app:layout_constraintTop_toBottomOf="@+id/edtMasv"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvPhanloai"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/str_row3_student"
        android:textSize="11pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toEndOf="@+id/imghinhanh"
        app:layout_constraintTop_toTopOf="@id/edtPhanloai"
        app:layout_constraintBottom_toBottomOf="@id/edtPhanloai"
        app:layout_constraintEnd_toEndOf="@+id/tvTensv"
        />
    <TextView
        android:id="@+id/edtPhanloai"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:textSize="11pt"
        android:textColor="#E4ABCA"
        app:layout_constraintStart_toEndOf="@+id/tvPhanloai"
        app:layout_constraintTop_toBottomOf="@+id/edtTensv"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>